more build process fixes

--- a/uClibc-0.9.33.2-m68k.config
+++ b/uClibc-0.9.33.2-m68k.config
@@ -188,8 +188,8 @@ UCLIBC_HAS_GLOB=y
 #
 # Library Installation Options
 #
-RUNTIME_PREFIX="/usr/local/m68k-uclinux/"
-DEVEL_PREFIX="/usr/local/m68k-uclinux"
+RUNTIME_PREFIX="/opt/m68k-uclinux-tools/m68k-uclinux/"
+DEVEL_PREFIX="/opt/m68k-uclinux-tools/m68k-uclinux"
 MULTILIB_DIR="lib"
 HARDWIRED_ABSPATH=y
 
